feat：悬浮窗文档完善

--- a/Read/ReadMeWiki/01.大型方案/11.悬浮窗开发设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/11.悬浮窗开发设计实践.md
@@ -35,13 +35,13 @@
 - 06.其他设计说明
     - 6.1 性能设计
     - 6.2 稳定性设计
-    - 6.3 灰度设计
-    - 6.4 降级设计
-    - 6.5 异常设计
+    - 6.3 异常设计
+    - 6.4 音视频浮窗交互设计
 - 07.遇到的问题和坑
     - 7.1 处理输入法层级关系
     - 7.2 边界逻辑关闭悬浮窗
     - 7.3 点击多次打开页面
+    - 7.4 Home键遇到的问题
 
 
 
@@ -58,9 +58,9 @@
 
 #### 1.2 遇到问题
 - 什么是悬浮窗
-    - 全局悬浮窗在许多应用中都能见到，点击Home键，小窗口仍然会在屏幕上显示。
+    - 全局悬浮窗在许多应用中都能见到，点击Home键，小窗口仍然会在屏幕上显示。注意：悬浮窗注意申请权限！
 - 那么开发全局悬浮窗属于那一类呢？
-    - 属于系统窗口，相当于跟Toast是一个级别的。
+    - 属于系统窗口，相当于跟Toast是一个级别的。针对悬浮窗的展示和移除，则可以模仿Toast中addView和removeView操作……
 - 视频通话Activity如何最小化
     - Activity本身自带了一个moveTaskToBack(boolean nonRoot)，我们要实现最小化只需要调用moveTaskToBack(true)传入一个true值就可以了，但是这里有一个前提，就是需要设置Activity的启动模式为singleInstance模式，两步搞定。
     - 注：activity最小化后重新从后台回到前台会回调onRestart()方法。点击悬浮窗开启activity会回调onNewIntent(注意可以setIntent(intent)一下)
@@ -82,17 +82,20 @@
 
 #### 1.4 设计目标
 - 目前开发悬浮窗的方案有以下几种
-    - 第一种：写在base里面或者监听所有activity生命周期，这样每次启动一个新的Activity都要往页面上addView一次。
-    - 第二种：采用在Window上添加View的形式，相当于是全局性的悬浮窗。一般是采用这种
+    - 第一种：写在base里面或者监听所有activity生命周期，这样每次启动一个新的Activity都要往页面上addView一次，耦合性比较强。
+    - 第二种：采用在Window上添加View的形式，相当于是全局性的悬浮窗。封装成库，暴露Api给开发者调用。
+    - 第三种：采用服务Service，然后在Service中采用WindowManager添加和移除View操作。那么在Activity中想要展示弹窗则需要通过广播通信，让Service收到广播处理逻辑。移植性比较弱！
 - 悬浮窗设计目标
     - 良好的接口设计，可以设置各种自定义视图，支持拖动和拖拽吸附到边缘。强大的Api方法和傻瓜式调用链路。
+- 展示悬浮窗能否想Popup那样依附在某控件位置
+    - 我在写悬浮窗库时，思考能否想Popup那种有showAsDropDown方法Api，可以显示在某个View的重心位置，然后在设置x和y偏移量。这个是可以做到的，加上这个Api方便库的强大使用！
 
 
 #### 1.5 收益分析
 - 悬浮窗收益
     - 提高产品的用户体验，app推到后台，或者推出页面做其他操作(比如查看信息)，这个时候浮窗功能主要是增加通话的友好
 - 技能收益
-    - 下沉为功能基础库，可以方便各个产品线使用，提高开发的效率。避免跟业务解耦合
+    - 下沉为功能基础库，可以方便各个产品线使用，提高开发的效率。避免跟业务解耦合。使用场景有：音视频，直播，debug悬浮工具等……
 
 
 ### 02.Window概念
@@ -113,6 +116,7 @@
     - APP端是可以通过unLockCanvasAndPost直接同SurfaceFlinger通信进行重绘的，就是说图形的绘制同WMS没有关系，WMS只是负责窗口的管理，并不负责窗口的绘制。
 
 
+
 #### 2.2 Window的概念
 - Window是个抽象类，PhoneWindow是Window唯一的实现类。PhoneWindow像是一个工具箱，封装了三种工具：
     - DecorView、WindowManager.LayoutParams、WindowManager。
@@ -121,6 +125,7 @@
 - Window并不是真实地存在着的，而是以View的形式存在。
     - Window本身就只是一个抽象的概念，而View是Window的表现形式。要想显示窗口，就必须调用WindowManager.addView(View view, ViewGroup.LayoutParams params)。
     - 参数view就代表着一个窗口。在Activity和Dialog的显示过程中都会调用到wm.addView(decor, l)；所以Activity和Dialog的DecorView就代表着各自的窗口。
+
 
 
 #### 2.3 LayoutParams
@@ -132,7 +137,9 @@
     - y值用于确定悬浮窗的位置，如果要纵向移动悬浮窗，就需要改变这个值。
     - width值用于指定悬浮窗的宽度。
     - height值用于指定悬浮窗的高度。
-
+- 那么这个里面如何计算悬浮窗上下左右的位置呢？比如有个场景悬浮窗和音视频页面放大和缩小就需要拿到悬浮窗位置
+    - 普通View如何拿到上下左右位置，可以采用sourceView.getGlobalVisibleRect(visibleRect)，简单来说就是对目标view在父view映射，然后从屏幕左上角开始计算，然后保存到rect中。
+    - 悬浮窗View如何拿到上下左右位置，left = layoutParams.x；top = y，right = x + layoutParams.width；bottom = y + layoutParams.height
 
 
 
@@ -146,7 +153,7 @@
 
 #### 3.2 关键技术要点
 - 悬浮窗权限判断
-    - 这个需要注意针对不同的版本需要适配权限。
+    - 这个需要注意针对不同的版本需要适配权限。注意网上说有什么方法可以绕过权限申请，这个是不可能的事情。同时要注意，部分手机判断悬浮窗权限Api可能失效……
 - 将view添加到悬浮窗上
     - 利用addView将View添加在window上，同样的，WindowManager.LayoutParams.type可以设置View的层级，防止被其他业务界面所覆盖。
 
@@ -293,20 +300,27 @@
     android.view.WindowManager$BadTokenException: Unable to add window android.view.ViewRootImpl$W@f8ec928 -- permission denied for window type 2002
     ```
 
+
 ### 06.其他设计说明
 #### 6.1 性能设计
+- 性能设计在该库中主要涉及两点
+    - 第一个如果是用在activity中，那么则需要注意内存泄漏的问题，需要释放activity上下文的引用
+    - 第二个如果是用在全局，那么需要注意添加view避免重复添加(如果已经添加则首先要移除)，然后销毁的时候把FloatWindow各种属性设置成null清理
 
 
 #### 6.2 稳定性设计
+- 如何避免窗口移动，移动后松手的瞬间触发了点击事件
+    - 首先设置一个布尔标记值（触摸移动标记），在手指按下去（ACTION_DOWN）的时候设置为false。
+    - 然后在移动（ACTION_MOVE）的时候，如果用户移动了手指，那么就拦截本次触摸事件，从而不让点击事件生效。
+    - 最后在手指抬起（ACTION_UP，ACTION_CANCEL）的时候，返回记录的触摸移动标记。如果是true表示自己消费事件，则不会让点击事件生效。
+- 这个地方需要注意两点
+    - 第一点：为何要监听ACTION_CANCEL事件，是因为手指拖动，快速拖动到窗口外，这个时候没有手指抬起操作，那么监听事件结束主要是增强边界逻辑。
+    - 第二点：怎么判断滑动？因为点击click也会执行down，move，up等一连串事件。这个时候就要判断最小move距离是否大于系统最小触摸距离，如果是则为拖动，否则是点击！
+- 如何解决滑出指定距离又滑入当作是点击事件bug
+    - 这个这个，可以当作一种增强逻辑，但是但是手指操作不出来，先放着……
 
 
-#### 6.3 灰度设计
-
-
-#### 6.4 降级设计
-
-
-#### 6.5 异常设计
+#### 6.3 异常设计
 - 针对悬浮窗的添加，移除和更新操作需要增加catch操作。那么为何要这样操作，模仿吐司。如下所示：
     ```
     try {
@@ -335,6 +349,10 @@
     ```
 
 
+#### 6.4 音视频浮窗交互设计
+- 用户使用过程中，可能会直接按Home键，这个时候如何提示呢？
+    - 产品交互：页面推到后台，音视频悬浮窗仍然是可见状态，这个时候点击悬浮窗可以再次回到前台！
+    - 
 
 
 ### 07.遇到的问题和坑
@@ -357,6 +375,18 @@
 - 问题说明一下
     - 如果你的悬浮窗点击事件是打开页面的话，这里需要注意了，别忘了将这个打开的页面的启动模式设置为singleTop或者是singleTask，从而复用同一个，远离一直按返回的地狱操作。
 
+
+#### 7.4 Home键遇到的问题
+- 先说一下遇到问题的场景
+    - 按home退到桌面从桌面点击应用图标又从启动页重新启动的，挺奇怪的。点击home键按道理说是不会推出MainActivity的呀
+- 先说下代码逻辑
+    - 语音/视频通话界面activity 配置 android:launchMode=“singleInstance” 模式，切换到悬浮框调用 moveTaskToBack(true)方法，能启动小窗口，通话页面退到后台。
+- 调试中发现的问题
+    - 通话界面按home键，之前的activity销毁了，日志发现走了onDestroy，重新点击app图标，MainActivity相关页面重新onCreate（相当于重新启动app了）。
+    - 因为通话页面是singleInstance模式，此时有两个任务栈，按Home键后再从任务程序中切回，此时应用只保留了第二个任务栈，已经失去了和第一个任务栈的关系，finish之后无法在回到第一个任务栈。
+- 该问题解决方案
+    - 给通话界面设置taskAffinity，如果不设置的话，按下home键时系统会清理最近不活动的和application相同的taskAffinity的所有处于后台的栈，taskAffinity默认与application是同一个。
+    - 给通话页面设置taskAffinity之后，MainActivity所在后台栈就不会被清理。需要注意：若想在taskAffinity属性生效，需要在启动该Activity时设置Flag为FLAG_ACTIVITY_NEW_TASK。
 
 
 
