--- a/Read/ReadMeWiki/01.大型方案/17.App动画通用方案实践.md
+++ b/Read/ReadMeWiki/01.大型方案/17.App动画通用方案实践.md
@@ -84,6 +84,11 @@
 - 对于 Animator 动画实现机制
     - Animator动画的实现机制说起来其实更加简单一点，因为他其实只是计算动画开启之后，结束之前，到某个时间点得时候，某个属性应该有的值，然后通过回调接口去设置具体值。
     - 其实 Animator 内部并没有针对某个 view 进行刷新，来实现动画的行为，动画的实现是在设置具体值的时候，方法内部自行调取的类似 invalidate 之类的方法实现的。也就是说使用 Animator 内部的属性发生了变化。
+- 属性动画的原理
+    - 属性动画，要求对象有这个属性的set方法，执行时会根据传入的 属性初始值、最终值，在每帧更新时调用set方法设置当前时刻的 属性值。
+    - 随着时间推移，set的属性值会接近最终值，从而达到动画效果。如果没传入初始值，那么对象还要有get方法，用于获取初始值。
+    - 见PropertyValuesHolder的setupValue、setAnimatedValue方法。
+      
 
 
 
@@ -289,16 +294,20 @@
     - 当属性值（上面方法的参数）只设置一个时就把通过getXXX反射获取的值作为起点，设置的值作为终点；如果设置两个（参数）， 那么一个是开始、另一个是结束。
 - ObjectAnimator代码案例
     ``` java
-    ObjectAnimator translation = ObjectAnimator.ofFloat(imageView, "translationX", 300, 200, 100);
-    ObjectAnimator rotate = ObjectAnimator.ofFloat(imageView, "rotation", 0f, 360f);
-    ObjectAnimator alpha = ObjectAnimator.ofFloat(imageView, "alpha", 1f, 0f, 1f);
+    ObjectAnimator
+        .ofFloat(imageView,"translationX",300, 200, 100)
+        .setInterpolator(LinearInterpolator)
+        .setEvaluator(IntEvaluator)
+        .setDuration(500)
+        .start();
     ```
 - ObjectAnimator的注意事项
     - ObjectAnimator 的动画原理是不停的调用 setXXX 方法更新属性值，所有使用 ObjectAnimator 更新属性时的前提是 Object 必须声明有getXXX和setXXX方法。 
     - 我们通常使用 ObjectAnimator 设置 View 已知的属性来生成动画，而一般 View 已知属性变化时都会主动触发重绘图操作， 所以动画会自动实现；
     - 但是也有特殊情况，譬如作用 Object 不是 View，或者作用的属性没有触发重绘，或者我们在重绘时需要做自己的操作，添加动画监听然后在onAnimationUpdate中做具体逻辑。
-
-
+- 源码流程分析
+    - -> ObjectAnimator#ofFloat，传入了一个target和propName，然后在设置Values
+    -     
 
 
 ##### 5.3.2 ValueAnimator
@@ -379,6 +388,10 @@
     - https://mp.weixin.qq.com/s/I7rUg8z539P8OaQEfpmQgA
 - 带你走一波Transition Animator转场动画相关事项
     - https://juejin.cn/post/6844904032033603591
+- Android属性动画,看完这篇够用了吧
+    - https://juejin.cn/post/6846687601118691341#heading-3
+- “为什么属性动画移动后仍可点击”，你怎么答？
+    - https://mp.weixin.qq.com/s/hiWxzJkDjvDoClOUuJI7CA
 
 
 
