--- a/Read/ReadShareWiki/08.技术管理/11.技术周会的事项.md
+++ b/Read/ReadShareWiki/08.技术管理/11.技术周会的事项.md
@@ -27,7 +27,7 @@
 - 提前更新分享物料，如果有分享内容，需提前将分享内容发到群里，并托管到相应渠道：
 - 10分钟小分享：上传wiki，十分钟分享计划
 - 常规大分享：但wiki对文件大小上传有限制
-- 系列技术培训：请托管在该系列统一的技术文档下，例如统一的Kotlin培训、Flutter培训
+- 系列技术培训：请托管在该系列统一的技术文档下，或者写到同一个分享目录下面，例如统一的Kotlin培训、Flutter培训
 
 
 ### 04.周会中记录
