feat：悬浮窗异常上报完善

--- a/Read/ReadMeWiki/01.大型方案/11.悬浮窗开发设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/11.悬浮窗开发设计实践.md
@@ -36,7 +36,7 @@
     - 6.1 性能设计
     - 6.2 稳定性设计
     - 6.3 异常设计
-    - 6.4 音视频浮窗交互设计
+    - 6.4 事件上报设计
 - 07.遇到的问题和坑
     - 7.1 处理输入法层级关系
     - 7.2 边界逻辑关闭悬浮窗
@@ -78,6 +78,12 @@
     - UI框架层：负责管理窗口中View组件的布局与绘制以及响应用户输入事件
     - WindowManagerService层：负责管理窗口Surface的布局与次序
     - SurfaceFlinger层：将WindowManagerService管理的窗口按照一定的次序显示在屏幕上
+- WMS(WindowManagerService)相关概念
+    - Window:它是一个抽象类，具体实现类为 PhoneWindow ，它对 View 进行管理。Window是View的容器，View是Window的具体表现内容；
+    - WindowManager:是一个接口类，继承自接口 ViewManager ，从它的名称就知道它是用来管理 Window 的，它的实现类为 WindowManagerImpl；
+    - WMS:是窗口的管理者，它负责窗口的启动、添加和删除。另外窗口的大小和层级也是由它进行管理的；
+    - ![image](https://img-blog.csdnimg.cn/1e915aa83fe748849e6ed62dad522eef.png)
+
 
 
 #### 1.4 设计目标
@@ -96,6 +102,9 @@
     - 提高产品的用户体验，app推到后台，或者推出页面做其他操作(比如查看信息)，这个时候浮窗功能主要是增加通话的友好
 - 技能收益
     - 下沉为功能基础库，可以方便各个产品线使用，提高开发的效率。避免跟业务解耦合。使用场景有：音视频，直播，debug悬浮工具等……
+- 悬浮窗库代码
+    - https://github.com/yangchong211/YCAppTool/tree/master/WidgetLib/FloatWindow
+
 
 
 ### 02.Window概念
@@ -127,8 +136,13 @@
     - 参数view就代表着一个窗口。在Activity和Dialog的显示过程中都会调用到wm.addView(decor, l)；所以Activity和Dialog的DecorView就代表着各自的窗口。
 
 
+#### 2.3 WindowManager
+- 在了解WindowManager管理View实现之前，先了解下WindowManager相关类图以及Activity界面各层级显示关系；
+    - ![image](https://img-blog.csdnimg.cn/6a4de022d5234171a0a68e4e4ce6dabe.png)
 
-#### 2.3 LayoutParams
+
+
+#### 2.4 LayoutParams
 - WindowManager.LayoutParams这个类用于提供悬浮窗所需的参数，其中有几个经常会用到的变量：
     - type值用于确定悬浮窗的类型，一般设为2002，表示在所有应用程序之上，但在状态栏之下。
     - flags值用于确定悬浮窗的行为，比如说不可聚焦，非模态对话框等等，属性非常多，大家可以查看文档。
@@ -176,6 +190,8 @@
     - -> WindowSession.addToDisplay(AIDL进行IPC)      
     - -> WindowManagerService.addWindow() 
     - -> ViewRootImpl.setView
+- 从 WindowManager 到 WMS 的具体流程如下所示：
+    - ![image](https://img-blog.csdnimg.cn/1a24259d5e504f0d9163392344781de1.png)
 - 这里讲解一下AIDL交互的流程逻辑
     - 主要分析是ViewRootImpl#setView()到WindowManagerService.addWindow()的这个过程，涉及到跨进程通信。
     - 1.ViewRootImpl#setView()过程。mWindowSession是IWindowSession对象。在创建ViewRootImpl对象时被实例化。
@@ -301,6 +317,16 @@
     ```
 
 
+### 05.方案基础设计
+#### 5.1 整体架构图
+
+
+#### 5.2 UML设计图
+- 悬浮窗整体UML类图
+    - ![image](https://img-blog.csdnimg.cn/413a4e7509874136bf18ea430678f7f9.png)
+
+
+
 ### 06.其他设计说明
 #### 6.1 性能设计
 - 性能设计在该库中主要涉及两点
@@ -348,11 +374,33 @@
     }
     ```
 
+#### 6.4 事件上报设计
+- 在悬浮窗中，有一部分代码添加上了catch操作。那么能否把这一部分的异常当作事件上报到APM上来
+    - 第一种方案：依赖APM，然后调用api进行事件上报，显然这种是不可行的。因为该功能库是不想依赖太大的外部库。
+    - 第二种方案：采用接口+实现类，通过反射的形式去调用。但这样又感觉不太好，采用Class.forName要避免混淆导致类找不到。
+    - 第三种方案：采用抽象类+实现类，将实现类的对象设置到抽象类中调用，实现类在壳工程做具体操作。
+- 具体实现步骤如下所示
+    - 举一个简单的例子说明该思路，比如，我在悬浮窗依赖接口层，然后调用代码如下所示
+    ``` java
+    ExceptionReporter.reportCrash("Float FloatWindow updateViewLayout", e);
+    ```
+- 然后，在app壳工程中具体操作如下所示
+    ``` java
+    ExceptionReporter.setExceptionReporter(ExceptionHelperImpl())
+    public class ExceptionReporterImpl extends ExceptionReporter {
+        @Override
+        protected void reportCrash(Throwable throwable) {
+            //壳工程中可以拿到APM，比如上传到bugly平台上
+        }
+    
+        @Override
+        protected void reportCrash(String tag, Throwable throwable) {
+    
+        }
+    }
+    ```
 
-#### 6.4 音视频浮窗交互设计
-- 用户使用过程中，可能会直接按Home键，这个时候如何提示呢？
-    - 产品交互：页面推到后台，音视频悬浮窗仍然是可见状态，这个时候点击悬浮窗可以再次回到前台！
-    - 
+
 
 
 ### 07.遇到的问题和坑
@@ -390,13 +438,8 @@
 
 
 
-### 参考博客
-- Android悬浮框无法弹出输入法的原因
-    - https://blog.csdn.net/iromkoear/article/details/68936832
-- Android悬浮窗原理解析
-    - https://blog.csdn.net/Awenyini/article/details/78265284
-
-
+### 封装库：https://github.com/yangchong211/YCAppTool
+### 公共组件层：https://github.com/yangchong211/YCCommonLib
 
 
 
