--- a/Read/ReadMeWiki/06.Framwork/01.App核心概念分析.md
+++ b/Read/ReadMeWiki/06.Framwork/01.App核心概念分析.md
@@ -13,8 +13,10 @@
     - 4.1 启动流程图
     - 4.2 流程图说明
     - 4.3 Window如何创建
-- 05.Activity层级图
-    - 5.1 层级图
+- 05.Activity绘制流程
+    - 5.1 setContentView()
+    - 5.2 View绘制时机
+    - 5.3 真正的绘制
 - 06.DecorView说明
     - 6.1 什么是DecorView
     - 6.2 DecorView如何创建
@@ -186,8 +188,40 @@
 
 
 ### 05.Activity层级图
-#### 5.1 层级图
-- 看 1.5 图片 
+#### 5.1 setContentView()
+- 调用PhoneWindow.setContentView(resouseID)
+- PhoneWindow中：创建mDector:窗体上的整个View：里面有官方的主题布局+用户自己的布局；
+- PhoneWindow中：创建mContentParent:官方主题布局中提供给用户装载布局的容器：id为content；
+- 调用mLayoutInflater.inflater(resouseID,mContentParent):
+- 解析用户的布局xml
+- 递归调用：解析根布局，通过反射创建根布局；解析子view，通过反射创建view；
+- 最后PhoneWindow中的mContentParent加载用户的根布局；提交view数据
+
+
+
+#### 5.2 View绘制时机
+- 在AMS回调ActivityThread中的handleResumeActivity时,也就是Resume时，而不是onCreate()；
+    - 获取PhoneWindow
+    - 获取PhoneWindow中的mDector布局视图view
+    - 将mDector布局视图view传给ViewRootImpl
+    - ViewRootImpl中调用requestLayout()
+    - requestLayout()中依次调用：performMeasure()、performLayout()、performDraw()
+
+
+#### 5.3 真正的绘制
+- ViewRootImpl.performTraversals()
+    - 调用relayoutWindow()：
+    - 创建用户java层的surface：只有用户提供的画面数据；
+    - 创建native层的surface：包含用户提供的画面数据（java层的surface）+系统的画面数据（状态栏，电池、wifi等等）；
+    - 创建完surface后：依次调用：performMeasure（对应view的onMeasure）、performLayout(onLayout)、performDraw(onDraw);
+- 在performDraw()中：
+    - 将view的数据传至native层的surface
+    - surface中的canvas记录数据
+    - 生成bitmap图像数据（此时数据是在surface中）
+    - 将surface放入队列中；生产者消费者模式；
+    - 通知surfaceflinfer进程去队列中取surface数据
+    - surfaceflinfer拿到不同的surface,进行融合，生成bitmap数据
+    - 将bitmap数据放入framebuffer中，进行展示
 
 
 
