--- a/Read/ReadMeWiki/06.Framwork/03.WMS机制深入分析.md
+++ b/Read/ReadMeWiki/06.Framwork/03.WMS机制深入分析.md
@@ -35,13 +35,17 @@
     - 管理Surface的显示顺序、尺寸、位置
     - 管理窗口动画
     - 输入系统相关：WMS是派发系统按键和触摸消息的最佳人选，当接收到一个触摸事件，它需要寻找一个最合适的窗口来处理消息，而WMS是窗口的管理者，系统中所有的窗口状态和信息都在其掌握之中，完成这一工作不在话下。
+- WMS(WindowManagerService)相关概念
+    - Window:它是一个抽象类，具体实现类为 PhoneWindow ，它对 View 进行管理。Window是View的容器，View是Window的具体表现内容；
+    - WindowManager:是一个接口类，继承自接口 ViewManager ，从它的名称就知道它是用来管理 Window 的，它的实现类为 WindowManagerImpl；
+    - WMS:是窗口的管理者，它负责窗口的启动、添加和删除。另外窗口的大小和层级也是由它进行管理的；
 
 
 
 #### 1.2 应用于那些场景
 - Activity页面渲染
     - Activity 启动后就可以看到我们写的 Layout 布局界面，Activity 从 setContentView() 加载布局到Window上，这个过程就涉及到WMS。
-
+- Dialog弹窗渲染
 
 
 #### 1.3 可以解决那些问题
@@ -284,8 +288,12 @@
 ### 参考博客
 - Android开发中的WMS详细解析
     - https://mp.weixin.qq.com/s/kanNsdzCv-Gs9ED3t-2mww
-
-
+- Android WMS工作原理浅析（一）
+    - https://blog.csdn.net/a734474820/article/details/125602626
+- Android WMS流程
+    - https://copyfuture.com/blogs-details/202112111524292567
+- Android | WMS 解析（一）
+    - https://www.ngui.cc/article/show-640926.html
 
 
 
