feat：悬浮窗异常上报完善

--- a/Read/ReadMeWiki/01.大型方案/17.App动画通用方案实践.md
+++ b/Read/ReadMeWiki/01.大型方案/17.App动画通用方案实践.md
@@ -35,11 +35,11 @@
 
 ### 01.整体概述
 #### 1.1 项目背景
+- Android 动画在开发中是不可或缺的功能，或者说是界面灵动的添加剂。那你是否总结过 Android 中总共为开发者提供了多少种方式的动画呢？
 
 
 
 #### 1.2 遇到问题
-- Android 动画在开发中是不可或缺的功能，或者说是界面灵动的添加剂。那你是否总结过 Android 中总共为开发者提供了多少种方式的动画呢？
 
 
 #### 1.3 基础概念介绍
@@ -246,6 +246,11 @@
 
 
 ### 05.动画的原理分析
+- 需要有一个明确的思路
+    - 例如：源码的入口的选择、甚至对其实现进行简单的猜测，源码分析相当于一个验证的过程，带着一个目标去看源码，这样的话，分析和理解起来更为方便。
+
+
+
 #### 5.1 逐帧动画原理
 
 
@@ -297,7 +302,6 @@
     ObjectAnimator
         .ofFloat(imageView,"translationX",300, 200, 100)
         .setInterpolator(LinearInterpolator)
-        .setEvaluator(IntEvaluator)
         .setDuration(500)
         .start();
     ```
@@ -307,7 +311,18 @@
     - 但是也有特殊情况，譬如作用 Object 不是 View，或者作用的属性没有触发重绘，或者我们在重绘时需要做自己的操作，添加动画监听然后在onAnimationUpdate中做具体逻辑。
 - 源码流程分析
     - -> ObjectAnimator#ofFloat，传入了一个target和propName，然后在设置Values
-    -     
+        - -> ObjectAnimator#setFloatValues，这里如果外部传递的values不为空，则会调用super方法
+        - -> ValueAnimator#setFloatValues，构造一个PropertyValuesHolder对象，然后保存view在动画期间的属性和值，记住是动画期间的
+        - -> PropertyValuesHolder#setFloatValues，存储了我们的mValueType ，此外还存了一个mIntKeyframeSet。
+        - -> KeyframeSet#ofFloat，单纯的理解是，Keyframe的集合，而Keyframe叫做关键帧，为一个动画保存time/value（时间与值）对。
+    - -> ObjectAnimator#setInterpolator，记录下插值器，我们这里也线性插值器，如果没有设置则默认是这个
+    - -> ObjectAnimator#setDuration，就是简单在mDuration中记录了一下动画的持续时间，这个sDurationScale默认为1，用于调整观察动画，比如你可以调整为10，动画就会慢10倍的播放。
+    - -> ObjectAnimator#start，先调用AnimationHandler单例对象关闭之前的动画，然后调用super中start方法
+        - -> ValueAnimator#start，最终调用到了start(boolean playBackwards)方法
+        - -> ValueAnimator#start(boolean playBackwards)，首先设置一些关于动画标记位，然后一些变量属性
+        - -> ValueAnimator#addAnimationCallback，生成一个AnimationHandler对象，getOrCreateAnimationHandler就是在当前线程变量ThreadLocal中取出来，没有的话，则创建一个，然后set进去。
+        - -> ValueAnimator#setCurrentFraction，这个里面初始化动画配置，
+
 
 
 ##### 5.3.2 ValueAnimator
