--- a/Read/ReadShareWiki/05.表达提升/03.理解能力的锻炼.md
+++ b/Read/ReadShareWiki/05.表达提升/03.理解能力的锻炼.md
@@ -6,6 +6,7 @@
 - 05.学会记忆电影复述
 - 06.带着疑惑鼓励推测
 - 07.理解监测提升能力
+- 08.去锐化表达能力
 - 11.今天起改变三点
 - 12.课后作业思考下
 
@@ -67,7 +68,11 @@
     - 感觉这个方法很好啊，有时候我自己学东西时候也是，学是学了，有没有真正理解呢，如果不自问一下还真不会发现自己有没有思考。
 
 
-
+### 08.去锐化表达能力
+- 如果你说了一大堆，别人依然一头雾水的话，那就是说你的话没有明确的中心，不知所云。其实表达能力的强与弱，取决于你自己有没有清楚理解到你要表达的观点是什么。
+- 你想跟别人描述一栋非常宏伟的建筑物，你只是说这座建筑物很大，很高，很长，别人也没有一个清晰的概念。
+- 但如果你说，这座建筑物占地面积有五个足球场这么大，走路绕一圈也要二十分钟，那么别人自然明白到这个建筑物到底有多宏伟了。
+- 开口之前，你一定要清楚知道自己想要表达的观点；有了观点后，你才可以围绕着这个观点做阐述。
 
 
 
