--- a/Read/ReadShareWiki/05.表达提升/04.沟通能力的演进.md
+++ b/Read/ReadShareWiki/05.表达提升/04.沟通能力的演进.md
@@ -1,170 +1,22 @@
 #### 目录介绍
-- 02.表达批评的方式
-- 03.表达赞美的方式
-- 04.表达说话分寸的方式
-- 05.表达拒绝的方式
-- 06.表达求助的方式
-- 07.关于工作反馈方式
-- 08.表达相互竞争方式
-- 09.表达建议的方式
-- 10.表达提问的方式
-- 11.关于表达送客方式
-- 12.尽量少参加是非八卦
-- 13.聊天尺度的问题
-- 18.关于其他问题说明
+- 06.尝试开放式提问
 
 
 
 
 
-### 02.表达批评的方式
-- **批评也要看关系**
-    - 忠言未必逆耳，即便你是好意，对方也未必会领情，甚至误解你的好意。除非你和对方有一定的交情或信任基础，否则不要随意提出批评。
-- **批评也可以很悦耳**
-    - 比较容易让人接受的说法是：“关于你的…，我有些想法，或许你可以听听看。
-- **不要急于反驳别人观点**
-    - 当你不同意对方的观点的时候，不要急于反驳，如果对方非要让你认输才肯罢休的话，那你认输反而是一种明智的选择。
-    - 因为当一个人陷入极端的时候，他是不会接受其他信息的。所以不管你怎么劝说都是没有用的，你只需要保留自己的意见，认输就好了。
 
 
+### 06.尝试开放式提问
+#### 6.1 不要把天聊死
+- 很多时候，朋友开心地说去动物园玩的好开心呀，得到地回答有以下几种。虽然也算是积极回应，但是这样的情况下经常就把天聊死了。
+- 1、哇！你去动物园了啊！真棒！2、真的啊！动物园玩的好嗨。3、真的啊！那你有没有看到大象啊，怎么样好看不？
+- 当别人打开了一个话题，让对话流动起来，多进行情感呼应、运用社交语言和开放式提问，让对话生动起来。正确的积极回应可以这样：
+- 社交语言（非语言反馈）：自然地表达兴趣，放下手中的事情，看着别人，做好聆听地准备。这一点很重要，不要一边做事一边听别人说！
+- 情感呼应：“哇！听上去玩的特别开心，我也好想下次去呢！感觉会非常非常好玩”。
+- 开放式提问：“那你多跟我说一说经过，看到了什么啊？遇到了那些比较好玩的事情，好想听你的分享”。
+- 这样地回应就会让别人对话自然而然地进行下去，当对话进行下去，才有机会更好地建立与别人的同事或者朋友关系。
 
-
-### 03.表达赞美的方式
-- **赞美行为而非个人**
-    - 举例来说，如果对方是厨师，千万不要说：你真是了不起的厨师。他心里知道有更多厨师比他还优秀。但如果你告诉他，你一星期有一半的时间会到他的餐厅吃饭，这就是非常高明的恭维。
-- **透过第三者表达赞美**
-    - 如果对方是经由他人间接听到你的称赞，比你直接告诉本人更多了一份惊喜。相反地，如果是批评对方，千万不要透过第三者告诉当事人，避免加油添醋。
-- **客套话也要说得恰到好处**
-    - 客气话是表示你的恭敬和感激，所以要适可而止。有人替你做了一点点小事，你只要说谢谢。、对不起，这件事麻烦你了。至于才疏学浅，请阁下多多指教。这种缺乏感情的客套话，就可以免了。
-- **面对别人的称赞，说声谢谢就好**
-    - 一般人被称赞时，多半会回答还好！或是以笑容带过。与其这样，不如坦率接受并直接跟对方说谢谢。有时候对方称赞我们的服饰或某样东西，如果你说：这只是便宜货！反而会让对方尴尬。
-- **通过第三方赞美别人**
-    - 我们在赞美别人的时候，不要直接的去夸赞他，而是所采用第三方的赞美。比方说你想夸你们小区的张大妈为人善良，你可以说：“隔壁王大爷天天跟我说您为人善良，今日一见，还真是那么回事呢。”这就比你直接说一些空洞的赞美要可信多了。
-- **不经意之间赞美**
-    - 赞美一定不要为了赞美而赞美，要不经意之间。你们在聊天的时候，突然给她一个赞美，然后不要等她的回应，继续刚才的说话内容，就当没发生一样。
-    - 记住，你的赞美不需要立刻获得她的肯定，你只是刚好发现了，说出来而已，你并不期待对方会给你好的奖励。你不经意地忽略掉赞美，但是女人却会一下子把注意力转移到你的赞美上了，她可能会继续追问你为什么会那么说她，这也是她对你的一种投资。
-
-
-
-
-
-### 04.表达说话分寸的方式
-- **说话需要注意场合**
-    - 不要当着外人的面批评自己的朋友或同事，这些话私底下关起门来说就好。
-- **说话语气要平等**
-    - 主管切忌说“我有十几年的经验，听我的就对了。”比较好的说法是：“这方法我用过，而且很有效，你要不要试试看？”
-- **尬聊之后短暂的沉默**
-    - 有时候，短暂的沉默是一件非常正常的事情。很多人在聊天的时候会陷入短暂的沉默，他就会觉得此刻非常的尴尬，想尽快找些话题，反而越来越尴尬。
-    - 其实当聊天陷入沉默的时候，反而是人们在消化刚才谈话的内容。如果说真的是这个话题聊不下去了，那么沉默之后换一个话题不是更好吗？
-
-
-
-### 05.表达拒绝的方式
-- **拐弯抹角回绝**
-    - 许多社交场合，喝酒总是无法避免。不要直接说：“我不喝酒。”扫大家的兴。不如幽默地说：“我比较擅长为大家倒酒。”
-- **微笑拒绝回答私人问题**
-    - 如果被人问到不想回答的私人问题或让你不舒服的问题，可以微笑地跟对方说：“这个问题我没办法回答。”既不会给对方难堪，又能守住你的底线。
-- **拒绝也可以不失礼**
-    - 用餐时，若主人推荐你吃某样你不想吃的东西，可以说：“对不起，我没办法吃这道菜，不过我会多吃一点...”让对方感受到你是真心喜欢并感谢他们准备的食物。如果吃饱了，可以说：“这些菜真好吃，要不是吃饱了，真想再多吃一点。”
-
-
-
-### 06.表达求助的方式
-- **让对方觉得他很重要**
-    - 如果向前辈请求帮忙，可以说：“因为我很信任你，所以想找你商量…”让对方感到自己备受尊敬。
-- **选择合理时机**
-    - 当你有事要找同事或主管讨论时，应该根据自己问题的重要与否，选择对的时机。假若是为个人琐事，就不要在他正埋头思考时打扰。如果不知道对方何时有空，不妨先写信给他。
-
-
-
-### 07.关于工作反馈方式
-- **主动表达帮忙**
-    - 如果一时之间无法解决部属的问题，不要说“这种事先不要来烦我，”而是告诉他“我知道有谁可以帮忙。”
-- **直接描述现状**
-    - 和部属意见不同时，不要直接批评，而要说明不同点在哪。
-- **寻求解决**
-    - 如果部属绩效不佳，应该要询问他可以如何解决，不要采取威胁态度。
-
-
-
-### 08.表达相互竞争方式
-- **有欣赏竞争对手的雅量**
-    - 当你的对手或讨厌的人被称赞时，不要急着说：可是…，就算你不认同对方，表面上还是要说：是啊，他很努力。显示自己的雅量。
-- **吃亏有时才是占便宜**
-    - 吃亏有时才是占便宜，这话一点儿不假，从小爸爸就这么跟自己说，其实一直不是很理解。
-    - 为了无谓的话题跟朋友争个耳红面赤真是毫无意义，不如把所谓的“胜利”让给对方，学会适当的“认输”。当然是不关乎自己切身利益的事，碰到关系的核心利益的事还是必须据理力争的。还有就是不要贪图小便宜。
-    - 平时要反省自己，如果自己做错了要放下面子承认错误，给对方道歉，这点儿很重要。
-
-
-
-### 09.表达建议的方式
-- **同时提出建议**
-    - 提出批评之外，还应该提供正面的改进建议，才可以让你的批评更有说服力。
-- **弹性接纳同事意见**
-    - 即使你心有定见，也不要对部属说：“这些建议都考虑过了，不必再多说。」还是应该给部属机会，对他说：「关于这个问题，我已有了腹案，不过仍想听听你的看法。”
-- **不要纠正别人的错误**
-    - 不要过于鸡婆地纠正别人的发音、文法或事实，不仅会让对方觉得不好意思，同时也显得你很爱表现。
-- **避免不该说出口的回答**
-    - 像是：不对吧，应该是……这种话显得你故意在找碴。另外，我们也常说：听说…，感觉就像是你道听涂说得来的消息，有失得体。
-
-
-### 10.表达提问的方式
-- **聊天的问题尽可能具体**
-    - 和别人聊天的时候，我们问的问题越具体，回答的人越省力，他就更愿意和你聊下去。如果你每次聊天都会问一些特别复杂的问题，而别人又工作了一天，那时他会懒得跟你聊下去的，因为人家根本没有精力再为你消耗。
-
-
-
-### 11.关于表达送客方式
-- **下达送客令**
-    - 如果你觉得时间差不多该结束谈话或送客，但对方似乎完全没有要起身离开的意思，可以说：“不好意思，我得打通电话，时间可能有点久…”，或是：“今天真的很谢谢你来…”。你也可以不经意地看看自己的手表，让对方知道该走了。
-
-
-
-### 12.尽量少参加是非八卦
-- **不当八卦传声筒**
-    - 当一群人聊起某人的八卦或传言时，不要随便应声附和，因为只要说出口的话，必定会传到当事人耳中。最好的方法就是不表明自己的立场，只要说：“你说的部份我不太清楚。”
-- **遇尖锐问题退一步想**
-    - 遇到尖锐的问题，可以退一两步来考虑，话不要说的太直了。就如那个例子，你的一个好朋友吸毒了，你想劝他，如果直接跟他说，他不可能听的进去的，可以退两步想，为什么他会吸毒啊？就会想肯定是越到不开心的事或者有难言之隐吧，这样就可以朝这方面去想，跟对方聊他不开心的事，如果对方能够感受到你的真诚，那么他会把吸毒的事情告诉你，你才好更好的劝他。
-    - 其实生活中的很多事都是这样的，可以退一两步来想，这样就会豁然开朗。想一想为什么会这样，原因是什么，站在对方立场考虑他希望甚至他渴望什么，需要什么，然后朝这方面去聊就会聊很多，有话题可聊。
-
-
-
-
-### 13.聊天尺度的问题
-- **交情到了自然就会言深**
-    - 交情到了，自然就会言深。不要急于和别人聊特别有深度，或者掏心掏肺的话题。当双方的感情还没有达到那个地步的时候，说这些话题反而或让人觉得尴尬。
-- **不要轻易问人家隐私**
-    - 就算是很熟的人，也不要轻易地问人家特别隐私的问题。有些人会觉得，他和某某已经很熟了，问一下他的收入，也无关紧要吧！其实这往往会在无形中给被人尴尬，或伤害的人家的自尊心。
-- **拉弓射箭也要张弛有度**
-    - 说话就像拉弓射箭，张弛有度才是更好的选择。在很多人的想象中，一场理想的聊天应该是话题不断，毫无冷场的才读。其实高效的聊天应该留有空白才好，就像拉弓射箭的一张一弛，给别人留有思考和回味的时间才对。
-- **说话要多费些心**
-    - 说话要多费些心，说一些让对方能接的下去的话题。比如问问题，问的越仔细越好，让对方能够畅所欲言，并且要拓展，各个方面，其实有时不是没有话题，而是自己不动脑筋。
-    - 遇到人或者跟别人交谈时，要看他的眼睛，这样才能够让对方感受到自己是被重视的，也能表现自己的诚意和信心。不要眼神闪躲，自己这方面差很多，以后要注意。
-    - 要把对方放在心里，站在对方的立场来考虑问题，多为对方着想。对待别人要多表现出体贴的一面，关心对方，把为对方着想的地方表现出来，要不然别人怎么会知道你为了他着想呢？你的心思如果不说出来别人是猜不透的。
-- **话题卡住了就换话题**
-    - 一个话题卡住了，就可以换下一个话题，别要抱着一个话题不放。说道话题，重要的就是要广泛涉猎，多读书，多思考，平时事情上多留心，总结归纳，其实话题在生活中无处不在的。
-    - 每个人都喜欢聊自己，所以要尽量让对方能够很好的表现自己，让他感觉到自己的重要性。多说一些为什么啊，是不是啊，怎么会呢，你太幸运啦这些话，每个人都渴望得到别人的赞赏，所以要多表扬别人，别人的突出的地方，还有就是不要说的很空洞，要找到他希望别人表扬的地方，否则别人会认为你不够真诚。
-    - 还有就是多把周围一个人表扬夸奖另外一个人的话转给这个人听，这样才会越来越受欢迎，借用别人这个题目来表扬一个人是很明智的一件事，不管别人说没说，对大家都是有好处的。
-
-
-
-### 18.关于其他问题说明
-- **先报上自己大名**
-    - 忘记对方的名字，就当作是正式场合，向对方介绍自己的名字或拿出名片，对方也会顺势报上自己的大名和名片，免除了叫不出对方姓名的窘境。
-- **掌握1秒钟原则**
-    - 听完别人的谈话时，在回答之前，先停顿1秒钟，代表你刚刚有在仔细聆听，若是随即回话，会让人感觉你好像早就等着随时打断对方。
-- **听到没有说出口的**
-    - 当你在倾听某人说话时，听到的只是对方知道、并且愿意告诉你的。除了倾听，我们还必须观察。他的行为举止如何？从事什么工作？如何分配时间与金钱。
-- **不要表现出自己比对方厉害**
-    - 在社交场合交谈时，如果有人说他刚刚去了纽约1星期，就不要说上次你去了1个月，这样会破坏对方谈话的兴致。还不如顺着对方的话，分享你对纽约的感觉和喜爱。
-- **改掉一无是处的口头禅**
-    - 每个人说话都有习惯的口头禅，但会容易让人产生反感。例如：你懂我的意思吗、你清楚吗？、基本上…、老实说…。
-- **去除不必要的杂音**
-    - 有些人每一句话最后习惯加上“啊”等语助词，像是“就是说啊”、当然啦，在比较正式的场合，就会显得不够庄重稳重。
-- **别问不熟的人为什么**
-    - 如果彼此交情不够，问对方为什么？有时会有责问、探人隐私的意味。例如，你为什么那样做、你为什么做这个决定，这些问题都要避免。
-- **别以为每个人都认识你**
-    - 碰到曾经见过面，但认识不深的人时，绝不要说：“你还记得我吗”万一对方想不起来，就尴尬了。最好的方法还是先自我介绍：“你好，我是×××，真高兴又见面了。”
 
 
 
