--- a/Read/ReadShareWiki/05.表达提升/05.表达能力的提升.md
+++ b/Read/ReadShareWiki/05.表达提升/05.表达能力的提升.md
@@ -9,6 +9,7 @@
 - 08.一对多讲做分享
 - 09.30分钟电梯演讲
 - 10.提高表达的做法
+- 11.运用好表达技巧
 - 12.今天起改变三点
 - 15.课后作业思考下
 
@@ -68,6 +69,9 @@
 
 
 ### 06.用照片看图说话
+- 比如你看到一张长城的图片，感觉那幅图片很恢宏，那你这个时候会相当如何表达呢？先确定你要表达的切入点吧！是从建筑形态上来说，还是从历史文化上来说，还是世界古迹上来说，由你自己决定。
+- 
+
 
 
 ### 07.一问一答互探讨
@@ -86,6 +90,20 @@
 - 电梯演讲应用写作方面有一定的启迪作用，要有良好的开头，抓住问题的根本用简单的话说出来，最后要提炼观点。不论写什么文章，都要在观点提炼和归纳上下苦功夫。观点要响亮，归纳要紧凑，最好不要超过三条，做到一挥而切中肯綮，一语而击中要害，一笔而入木三分。
 
 
+
+### 11.运用好表达技巧
+#### 11.1 用顺叙按部就班讲
+- 顺叙大家都知道是什么回事。按部就班，从头开始，一步一步地娓娓道来。这种讲述方法没什么难度，只要按照时间，空间地顺序来展开话题，基本就能够形成一条逻辑清晰的表达脉络。
+- 例如你跟朋友说起一件很开心的事。“这件事让你开心”，就是你想要表达的观点。然后为什么你会得出这样的观点，接下来你就可以从头到尾，由起因，过程，结尾，来展开描述。
+- 这种方法，只要你有过经历，在你脑海里肯定有相应的回忆帮助你表达。首先什么什么，然后什么什么，接着什么什么，最后什么什么，一件事就这样表达完了。
+- 平时多写日记，把每天发生的事情记录下来，也可以提高自己顺叙的能力。当然，如果每天都围绕一件事做顺叙的开口表达练习，效果会更好。
+
+
+#### 11.2 倒叙来讲故事
+- 倒叙跟顺叙差别不大，只是把结果提到前面作为开头来说而已。在日常生活中，说话往往更容易用到倒叙这种表达方法，因为我们肯定会先表达结果，然后才说起整件事的原委。
+- 例如你去旅游回来，跟朋友说起，第一句话肯定是我前两天去了XX旅游，玩得好开心，那里风景很漂亮云云。完了后，再详细跟朋友阐述，为什么玩的开心，哪些风景漂亮等等，这时就要用得顺叙了。
+- 当你懂得利用顺叙为自己的话语服务，自然就会懂得如何利用倒叙表达你的观点。倒叙还是一种制造悬念，提高说话趣味的一种方式。
+- 比如你说今天遇到一件很离奇的故事，朋友听到你这么说，胃口自然被你吊起来了。然后这个故事是怎么样的，如何离奇，一步步姗姗而来也很精彩！
 
 
 
