--- a/Read/ReadShareWiki/05.表达提升/08.做好技术的演讲.md
+++ b/Read/ReadShareWiki/05.表达提升/08.做好技术的演讲.md
@@ -188,6 +188,31 @@
 - 然后就是简单描述下自己的从业经历，让大家明白我为什么有资格讲这个主题，这个部分讲好了可以增强说服力。最重要也是最容易被遗忘的一点是，一定要告诉听众，演讲内容对他们有什么帮助。
 
 
+#### 9.4 安全的内容结构
+- 内容结构怎样组织会让人觉得比较有逻辑而不会显得无头无绪呢？按照“问题缘起 - 方案 - 优化方案 - 总结”这类“总分总”的结构来组织内容是比较安全的。
+- 我们可以讲一下遇到了什么问题，问题产生的原因是什么，为了解决相应的问题，我们做了些什么，以及为什么要这么做。
+- 然后，我们就可以展开描述解决方案的迭代过程、遇到过的矛盾冲突点，针对这些矛盾，介绍下有哪些传统的解决方案以及优缺点，之后再介绍递进方案和最佳实践。最后做一个总结。
+
+
+#### 9.5 把控好整体节奏
+- 内容框架搞定了，内容呈现也搞定了，接下来有些讲师会有疑问，“讲的内容这么多，时间不够用怎么办？”有的则表示，“很快就把准备的内容讲完了，好尴尬呀！怎么办？”这就涉及演讲节奏的把控问题了。
+- 如何把控好演讲的整体节奏呢？个人经验是，人在紧张的情况下，语速会加快，导致演讲往往会比自己预计的时间更早结束。时刻提醒自己要放慢语速，会让听众觉得演讲人更稳重，也给了自己更多的思考时间。
+- 演讲之前，我们一定要规划好每一页 PPT 要讲什么内容，哪些是要点，要讲多少分钟。技术大会有一个好处就是中途不会有听众打断你，演讲结束后才会统一提问，所以提前规划好的节奏一般不会被打乱。
+
+
+
+#### 9.6 收尾时强调重点
+- 随着演讲逐渐进入尾声，一场 40-50 分钟的演讲，由于涉及的架构、流程、方案等技术细节非常多，根据我的经验，第二天还能记得全部内容 10% 的听众少之又少。
+- 听众记住的这 10% 是什么？除了开场灿烂的微笑，大部分就是收尾时演讲人“反复强调”的总结啦，所以最后的总结部分一定要重视。
+- 总结部分的内容在精不在多，听众有收获就达到目的了。总结的时候可以反复强调结论、强调实践。要想让听众记住你期望他记住的 2-3 个关键点，以达到分享的目的，在收尾时的总结和强调就至关重要。
+
+
+#### 9.7 回答提问讲技巧
+- 这个环节也是部分讲师比较头疼的，“万一碰上不会的问题怎么办？”我的个人经验是：首先，不要和提问者起冲突，特别是针对“你讲的我完全不赞同”这类观点。
+- 可以表示“这是自己公司的实践，方案有很多，各有优缺点。”然后就可以马上转入“下一个问题”。还可以将问题技巧性地转化一下，比如说“这位朋友要问的是不是这样一个问题呢？”而转化后的问题正是自己擅长的。
+- 还有一个大招，假如碰到让你比较尴尬的问题，你可以回答“这是个很好的问题，但几句话可能讲不清楚，感兴趣的话，我们线下交流。”这也是一种办法。
+
+
 
 ### 10.总结讲演的要点
 - 不知不觉写了这么多，最后做一个总结，要想做一场漂亮的技术演讲，我们需要做到：
