--- a/Read/ReadShareWiki/00.心怡宝贝/04.心怡的饮食爱好.md
+++ b/Read/ReadShareWiki/00.心怡宝贝/04.心怡的饮食爱好.md
@@ -1,8 +1,33 @@
 #### 目录介绍
+- 01.喜欢吃的家常菜
+- 02.喜欢吃的小吃
+- 03.喜欢吃的甜品
+- 04.喜欢吃的炖汤
+- 05.喜欢吃的农味产品
 
 
 
+### 01.喜欢吃的家常菜
+- 青椒炒肉丝
 
+
+### 02.喜欢吃的小吃
+- 油炸丸子
+
+
+### 03.喜欢吃的甜品
+- 蛋挞：曾经经常做蛋挞
+- 蛋糕
+
+
+
+### 04.喜欢吃的炖汤
+- 莲藕排骨汤：莲藕加上排骨，炖汤超级好吃
+
+
+### 05.喜欢吃的农味产品
+- 烤红薯：在老家烧火的土灶烤红薯，小时候的味道
+- 烤糍粑：用火烤磁盘，然后粘红糖吃
 
 
 
