--- a/Read/ReadMeWiki/01.大型方案/17.App动画通用方案实践.md
+++ b/Read/ReadMeWiki/01.大型方案/17.App动画通用方案实践.md
@@ -38,7 +38,6 @@
 - Android 动画在开发中是不可或缺的功能，或者说是界面灵动的添加剂。那你是否总结过 Android 中总共为开发者提供了多少种方式的动画呢？
 
 
-
 #### 1.2 遇到问题
 
 
@@ -99,7 +98,7 @@
 - 转场动画核心概念
     - 场景（scenes）和变换（transitions）。场景（scenes）定义了当前的 UI 状态；变换（transitions）则定义了在不同场景之间动画变化的过程。
 - 当一个场景改变的时候，transition 主要负责：
-    - （1）捕捉在开始场景和结束场景中每个 View 的状态。（2）根据视图一个场景移动到另一个场景的差异创建一个 Animator。
+    - 1）捕捉在开始场景和结束场景中每个 View 的状态。2）根据视图一个场景移动到另一个场景的差异创建一个 Animator。
 
 
 
@@ -309,7 +308,7 @@
     - ObjectAnimator 的动画原理是不停的调用 setXXX 方法更新属性值，所有使用 ObjectAnimator 更新属性时的前提是 Object 必须声明有getXXX和setXXX方法。 
     - 我们通常使用 ObjectAnimator 设置 View 已知的属性来生成动画，而一般 View 已知属性变化时都会主动触发重绘图操作， 所以动画会自动实现；
     - 但是也有特殊情况，譬如作用 Object 不是 View，或者作用的属性没有触发重绘，或者我们在重绘时需要做自己的操作，添加动画监听然后在onAnimationUpdate中做具体逻辑。
-- 源码流程分析
+- 源码流程分析过程
     - -> ObjectAnimator#ofFloat，传入了一个target和propName，然后在设置Values
         - -> ObjectAnimator#setFloatValues，这里如果外部传递的values不为空，则会调用super方法
         - -> ValueAnimator#setFloatValues，构造一个PropertyValuesHolder对象，然后保存view在动画期间的属性和值，记住是动画期间的
@@ -321,7 +320,7 @@
         - -> ValueAnimator#start，最终调用到了start(boolean playBackwards)方法
         - -> ValueAnimator#start(boolean playBackwards)，首先设置一些关于动画标记位，然后一些变量属性
         - -> ValueAnimator#addAnimationCallback，生成一个AnimationHandler对象，getOrCreateAnimationHandler就是在当前线程变量ThreadLocal中取出来，没有的话，则创建一个，然后set进去。
-        - -> ValueAnimator#setCurrentFraction，这个里面初始化动画配置，
+        - -> ValueAnimator#setCurrentFraction，这个里面初始化动画配置，设置当前Fraction，然后将计算的Fraction得到的
 
 
 
@@ -344,6 +343,9 @@
         }
     });
     ```
+- 源码流程分析过程
+
+
 
 
 ##### 5.3.3 ViewPropertyAnimator
