--- a/Read/ReadShareWiki/00.心怡宝贝/02.心怡的梦想清单.md
+++ b/Read/ReadShareWiki/00.心怡宝贝/02.心怡的梦想清单.md
@@ -1,4 +1,11 @@
 #### 目录介绍
+- 01.个人的目标
+- 02.个人的梦想
+- 03.短期的规划
+- 04.长期的规划
+- 05.存储的规划
+- 06.保险的规划
+- 07.家庭的规划
 
 
 
@@ -7,8 +14,9 @@
 
 
 
-
-
+### 06.保险的规划
+- 很有保险意识
+    - 主要是：重疾险，百万医疗，意外这三种保险。然后可以保障到最基础的，不要偏收益类型保险！
 
 
 
