--- a/Read/ReadMeWiki/04.架构设计/07.项目重构演进之路.md
+++ b/Read/ReadMeWiki/04.架构设计/07.项目重构演进之路.md
@@ -10,16 +10,22 @@
     - 2.1 重构什么
     - 2.2 何时重构
     - 2.3 思考如何重构
+    - 2.4 针对复杂场景
 - 03.重构技术手段
+    - 3.0 举一个重构例子
     - 3.1 罗列重构事项
     - 3.2 把握关键节点
     - 3.3 编写测试用例
     - 3.4 mock业务数据
     - 3.5 发现代码bug
+    - 3.6 优化编码方式
+- 04.是否重构辩论
+    - 4.1 针对复杂场景
 - 05.避免重构失败
     - 5.1 能否给充足理由
     - 5.2 乱套设计模式
     - 5.3 先有问题后改造
+
 
 
 ### 01.整体概述说明
@@ -101,23 +107,39 @@
     - 除了人工去发现低层次的质量问题，还可以借助很多成熟的静态代码分析工具（比如FindBugs、PMD），来自动发现代码中的问题，然后针对性地进行重构优化。
 
 
+
 ### 03.重构技术手段
 - 如何保证重构不出错呢？
     - 你需要熟练掌握各种设计原则、思想、模式，还需要对所重构的业务和代码有足够的了解。除了这些个人能力因素之外，最可落地执行、最有效的保证重构不出错的手段应该就是单元测试（Unit Testing）了。
     - 当重构完成之后，如果新的代码仍然能通过单元测试，那就说明代码原有逻辑的正确性未被破坏，原有的外部可见行为未变。
 
 
+#### 3.0 举一个重构例子
+- 举一个简单的例子看重构事项
+    - 现状：App业务线各种依赖庞大，然后交错在一起，关系变的复杂。依赖库之间的强依赖导致版本冲突多。模块方案发生变化，上层修改成本大。功能模块兼容性导致维护成本大。
+    - 重构方案：整个架构的核心思想是面向接口编程和依赖注入使各个模块之间实现解耦，然后通过横向角色划分与纵向层级划分的方式约定各个模块之间的关系，再通过接口分层的方式，明确具体模块在不同层级上需要实现的功能
+
+
 #### 3.1 罗列重构事项
+- 针对重构的业务详细罗列
+    - 针对一个比较大的重构业务，先进行梳理，然后根据问题或痛点思考，罗列解决方案，然后开始实践并保证代码稳定性，最后测试并交付。
+- 罗列重构事项
+    - 第一步：面向接口编程，根据业务抽取抽象接口，由于接口是对某个功能需求抽象，所以不会对具体的实现形成依赖。
+    - 第二步：层级划分与角色划分，总体分为三个层次：底层、组件层和应用层。
+    - 第三步：除了通过接口实现模块间的通讯方式，我们还设计了一套内部通讯协议，用于在应用内部消息通讯。对于一些易变的、灵活的、简单的通讯，可以直接通过发送消息的方式进行通讯。
+    - 第四步：抽离功能模块，抽离公共视图模块，抽离公共业务模块，抽离产线业务模块。
 
 
 
 #### 3.2 把握关键节点
-
+- 比如针对该例子关键点
+    - 第一个关键点：依赖错综复杂，那么就需要划分层次图，将App的架构设计分层。比如基础层，组件层，服务层，业务层，壳工程。然后定义好从上到下的关系，这样依赖就清晰明了！
+    - 第二个关键点：上层修改成本高，那这个时候能够根据业务抽象一套交互的接口
 
 
 #### 3.3 编写测试用例
 - 编写详细的测试用例
-    - 待完善
+    - 可以模仿谷歌官方demo来编写测试用例，这个测试用例的测试粒度越小越好。首先保证主流程畅通，然后在写边界测试用例。
 - 要把持续重构作为开发的一部分来执行
     - 那写单元测试实际上就是落地执行持续重构的一个有效途径。设计和实现代码的时候，我们很难把所有的问题都想清楚。
     - 而编写单元测试就相当于对代码的一次自我 Code Review，在这个过程中，可以发现一些设计上的问题（比如代码设计的不可测试）以及代码编写方面的问题（比如一些边界条件处理不当）等，然后针对性的进行重构。
@@ -125,9 +147,46 @@
 
 
 #### 3.4 mock业务数据
+- mock业务数据很重要
+    - 尤其是有接口请求的业务逻辑，这个时候可以mock本地json数据，然后模拟各种业务场景。十分有利于调试各种case
 
 
 #### 3.5 发现代码bug
+- 积极发现代码bug很重要
+    - 在代码演进中，bug避免重复出现很重要。作为实践写代码，这个过程自测case罗列一下，然后自测，自测一项勾选一项
+
+
+#### 3.6 优化编码方式
+- 了解敌人——丑陋的代码
+    - 臃肿的类：开发者不去思考这些功能是不是应该放在这同一个类中，导致这些类会变得很臃肿，造成一个类几千行，让下一个接盘侠欲哭无泪。
+    - 臃肿的方法：好几十上百行的一个函数堆在一块，用面向过程的思想来写代码，建议一个方法代码行数不超过80。
+    - 函数参数过多：函数参数过多会导致调用者对方法难以理解，参数弄混。想象一下一个函数连续传5个int值参数，能分清谁是谁吗?建议可以将参数组成一个对象传入。
+    - 层层嵌套的判断：如果逻辑不复杂尽量减少if-else的分支包裹，太难阅读。比如不满足条件了直接return，不走其他代码，这样可以减少一层嵌套。
+    - 满篇跑的常量值：一个类里面出现各种未命名的常量值。0，1，200等等铺天盖地。这种状态码意义改了，改代码会把你改哭的。难道就不能先声明一个统一的常量变量来使用吗。
+    - 模棱两可的命名：不能根据名字一眼看懂它的功能的命名不是一个好命名。当然生僻的单词除外。模糊的，没有功能意义的命名会给阅读造成很大困难。
+- 优化编码的具体操作
+    - 分拆大函数：当函数比较大了，就可以根据功能节点分拆成多个小函数，也许其中的小函数还可以公用。比如结算购物车，包括计算各类商品的总价，再计算折扣，再计算满减优惠，。分别拆分成三个，一眼就能看出这段逻辑先后做了什么。
+    - 封装到父类：如果多各类要执行相似的功能和代码，可以把该方法放到它们的父类中，或者提取出来成业务工具类。
+    - 针对类臃肿：方法迁移，遵守“单一职责”原则，当类中的方法不适合放在当前类中时，就应该为该方法寻找合适下家。移到与方法耦合大的类中。当一个方法被其他类使用比在它所在类中的使用还要频繁时，我们就需要使用迁移方法重构了——将方法迁移到更频繁地使用它的类中。
+    - 搬移字段：当在一个类中的某一个字段，被另一个类的对象频繁使用时，我们就应该考虑将这个字段的位置进行更改了
+    - 提炼类：一个类如果过于复杂，做了好多的事情，违背了“单一职责”的原则，所以需要将其可以独立的模块进行拆分，当然有可能由一个类拆分出多个类。对类的细化也是为了减少代码的重复性，以及提高代码的复用性，便于代码的维护。
+    - 提升方法、字段：将方法向继承链上层迁移的过程。用于一个方法被多个实现者使用时。在继承的体系中，当多个类使用了相同或类似的方法，就可以考虑将该方法抽取到基类，没有基类就创建一个。字段提升同方法。
+    - 降低方法：即父类抽象方法让多个子类实现。多个子类有相同的功能但是有各个具体的实现方法，那么这种封装就可以用多态性了，父类创建一个抽象方法，将方法实现降低到子类。
+    - 重复代码的提炼：有时候为了赶项目进度，尽快完成功能，会偷懒将实现功能的一片代码复制一遍，直接套用。这种把多余的删掉，保留一个，也许只需传一两个参数就可以封成一个方法供多处调用。
+    - 重命名变量（类、方法、变量）：这个很重要，可以不夸张地说，命名的水平就体现了编程能力的高低。在重构的过程中，当发现类名，方法名在当前版本不符合它的功能含义，就该考虑对其重新命名。
+    - 补加注释：对于全局变量，公用函数，逻辑复杂的地方添加注释，弥补之前的遗漏。
+
+
+### 04.是否重构辩论
+#### 4.1 针对复杂场景
+- 设计模式要干的事情就是解耦
+    - 也就是利用更好的代码结构将一大坨代码拆分成职责更单一的小类，让其满足高内聚低耦合等特性。
+    - 创建型模式是将创建和使用代码解耦，结构型模式是将不同的功能代码解耦，行为型模式是将不同的行为代码解耦。而解耦的主要目的是应对代码的复杂性。设计模式就是为了解决复杂代码问题而产生的。
+- 根据是否复杂投入时间
+    - 对于复杂代码，比如项目代码量多、开发周期长、参与开发的人员多，我们前期要多花点时间在设计上，越是复杂代码，花在设计上的时间就要越多。
+    - 如果你参与的只是一个简单的项目，代码量不多，开发人员也不多，那简单的问题用简单的解决方案就好，不要引入过于复杂的设计模式，将简单问题复杂化。
+
+
 
 
 ### 05.避免重构失败
@@ -150,10 +209,6 @@
     - 就能够自己分析得头头是道，说出它好的地方、不好的地方，为什么好、为什么不好，不好的如何改善，可以应用哪种设计模式，应用了之后有哪些副作用要控制等等。
 
 
-
-#### 参考博客
-- 沪江学习Android端重构实践
-    - https://mp.weixin.qq.com/s?__biz=MzAxNzMxNzk5OQ==&mid=2649485072&idx=1&sn=ffde71b21fe38251794bbb052b402cee&chksm=83f82610b48faf06d0a1e3cc55b3fa987cda233f4b12437b0abb2c2b36d3623985fa1ec1b5cd&scene=38#wechat_redirect
 
 
 
