--- a/Read/ReadVideoWiki/00.方案实践/10.视频深度优化的处理.md
+++ b/Read/ReadVideoWiki/00.方案实践/10.视频深度优化的处理.md
@@ -112,8 +112,8 @@
 
 ### 参考博客
 - 播放器性能优化之路：https://juejin.cn/post/6898867991161602061
-
-
+- 好看视频Android重构——围绕于播放器的重构实践
+    - https://mp.weixin.qq.com/s/R2EHg7kVN8VWkGgZ1z-7pQ
 
 
 
