--- a/Read/ReadMeWiki/04.架构设计/02.基础架构实践总结.md
+++ b/Read/ReadMeWiki/04.架构设计/02.基础架构实践总结.md
@@ -62,9 +62,12 @@
 
 ### 06.SDK其他设计点
 #### 6.1 兼容性设计
-- 对外接口（ API ）的兼容性：每次版本更新后，对外接口要尽可能保持不变。对于更改较大的接口，可以使用 @Deprecated 注解对老接口进行标记，并且做新接口调用的兼容，而不是直接删除老接口。
-- 功能的兼容性：在不影响整体功能和项目结构的基础上提供部分业务的需求定制化，可以形成配置项
-- 支持版本兼容性：minSdkVersion 的值应该尽可能的小，当然现在市场上基本都是 4.4 以上的手机了。这也从侧面要求不要随便依赖第三方库。
+- 对外接口（ API ）的兼容性
+    - 每次版本更新后，对外接口要尽可能保持不变。对于更改较大的接口，可以使用 @Deprecated 注解对老接口进行标记，并且做新接口调用的兼容，而不是直接删除老接口。
+- 功能的兼容性
+    - 在不影响整体功能和项目结构的基础上提供部分业务的需求定制化，可以形成配置项
+- 支持版本兼容性
+    - minSdkVersion 的值应该尽可能的小，当然现在市场上基本都是 4.4 以上的手机了。这也从侧面要求不要随便依赖第三方库。
 
 
 
