--- a/Read/ReadMeWiki/04.架构设计/07.项目重构演进之路.md
+++ b/Read/ReadMeWiki/04.架构设计/07.项目重构演进之路.md
@@ -36,6 +36,7 @@
     - 决定梳理并优化一下整个项目结构。在实施过程中，依然坚持将整个重构的过程融合在每个迭代中，逐步完成一次大的架构升级。
 
 
+
 #### 1.2 重构的要求
 - 重构代码对一个工程师能力的要求，要比单纯写代码高得多。
     - 重构需要你能洞察出代码存在的坏味道或者设计上的不足，并且能合理、熟练地利用设计思想、原则、模式、编程规范等理论知识解决这些问题。
@@ -72,7 +73,7 @@
     - 明确架构层级及各个模块所在的层级
     - 提高整个架构横向扩展的能力
     - 各模块独立开发，面向接口和协议编程
-    - 提高可维护性
+    - 提高代码可维护性
 
 
 
